# gg-clip-vit

./: .gitignore  README.md  constraints.txt  decoder.py  download_coco.py  inference.py  models.py  precompute_images.py  pyproject.toml  requirements.txt  setup.sh  ssh.sh  synthetic_generator.py  train_models.py  tyrone.ipynb  utils.py
custom_decoder_umut/: dataloader.py  decoder.py  inference_hidden.py  model_load_test.py  train_hidden.py
untitled/mlx8/week4/: dataset.py  model.py  train.py
