[project]
name = "gg-clip-vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.2"
dependencies = [
  "black>=25.1.0",
  # DO NOT PUT torch or anything depending on numpy here!
  # That would overwrite Computa's versions
  "tqdm>=4.67.1",
  "wandb>=0.20.1",
]

[dependency-groups]
local = [
    "datasets>=3.6.0",
    "hf-transfer>=0.1.9",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "speedtest-cli>=2.1.3",
    "streamlit>=1.46.0",
    "streamlit-drawable-canvas>=0.9.3",
    "torch>=2.6.0",
    "torchvision>=0.22.0",
    "transformers>=4.53.0",
]
